Add end turn command and ui

--- a/FSG/UI/EmpireDetails/EmpireDetails.xaml
+++ b/FSG/UI/EmpireDetails/EmpireDetails.xaml
@@ -1,6 +1,6 @@
 ﻿<Project>
     <!-- EMPIRE DETAILS -->
     <Panel Id="EmpireDetailsPanel" Width="300" Background="#000000" Padding="10">
-        <Label Id="EmpireNameLabel" />
+        <Label Id="EmpireNameLabel" Text="Sarasa" />
     </Panel>
 </Project>
