Add build buildings from UI

--- a/FSG/UI/Sidebar/EmpireInfo/EmpireInfo.xaml
+++ b/FSG/UI/Sidebar/EmpireInfo/EmpireInfo.xaml
@@ -1,6 +1,7 @@
 ﻿<Project>
     <VerticalStackPanel Background="#000000">
         <Label Id="EmpireNameLabel" />
+        <HorizontalSeparator />
         <Label Text="Owned Regions" />
         <VerticalStackPanel Id="RegionList" />
     </VerticalStackPanel>
