--- a/FSG/UI/Sidebar/RegionInfo/RegionInfo.xaml
+++ b/FSG/UI/Sidebar/RegionInfo/RegionInfo.xaml
@@ -1,6 +1,7 @@
 ﻿<Project>
     <VerticalStackPanel Background="#000000">
         <Label Id="RegionNameLabel" />
+        <HorizontalSeparator />
         <Label Text="Lands" />
         <VerticalStackPanel Id="LandList" />
     </VerticalStackPanel>
