--- a/FSG/UI/Sidebar/RegionInfo/RegionInfo.xaml
+++ b/FSG/UI/Sidebar/RegionInfo/RegionInfo.xaml
@@ -2,6 +2,9 @@
     <VerticalStackPanel Background="#000000">
         <Label Id="RegionNameLabel" />
         <HorizontalSeparator />
+        <Label Text="Empire" />
+        <Label Id="EmpireLabel" />
+        <HorizontalSeparator />
         <Label Text="Lands" />
         <VerticalStackPanel Id="LandList" />
     </VerticalStackPanel>
