--- a/FSG.UI/UI/Sidebar/Sidebar.xaml
+++ b/FSG.UI/UI/Sidebar/Sidebar.xaml
@@ -1,4 +1,4 @@
 ﻿<Project>
-    <Panel Id="Sidebar" Background="#000000" Width="400">
+    <Panel Id="Sidebar" Background="#000000">
     </Panel>
 </Project>
