--- a/FSG.UI/UI/Sidebar/RegionInfo/RegionInfo.xaml
+++ b/FSG.UI/UI/Sidebar/RegionInfo/RegionInfo.xaml
@@ -7,5 +7,8 @@
         <HorizontalSeparator />
         <Label Text="Lands" />
         <VerticalStackPanel Id="LandList" />
+        <HorizontalSeparator />
+        <Label Text="Building Queue" />
+        <VerticalStackPanel Id="BuildingQueue"></VerticalStackPanel>
     </VerticalStackPanel>
 </Project>
