--- a/FSG.UI/UI/Topbar/Topbar.xaml
+++ b/FSG.UI/UI/Topbar/Topbar.xaml
@@ -1,5 +1,5 @@
 ﻿<Project>
-    <HorizontalStackPanel Id="Topbar" Background="#000000" Height="30">
+    <HorizontalStackPanel Id="Topbar" Background="#000000" Height="30" Spacing="10">
         <Label Id="EmpireNameLabel" />
         <VerticalSeparator />
         <HorizontalStackPanel Id="ResourceList" Background="#000000" Spacing="10" />
