Add agent action conquest region

--- a/FSG.UI/UI/InfoPanel/AgentInfo/AgentInfo.xaml
+++ b/FSG.UI/UI/InfoPanel/AgentInfo/AgentInfo.xaml
@@ -11,6 +11,8 @@
         <Label Text="Current Action" />
         <Label Id="CurrentActionLabel" />
         <HorizontalSeparator />
+        <Label Text="Actions" />
+        <HorizontalStackPanel Id="ActionPanel" Spacing="8" />
         <Label Text="Spells" />
         <HorizontalStackPanel Id="SpellPanel" Spacing="8" />
     </VerticalStackPanel>
